force-app/main/default/objects/Opportunity__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>The customer account associated with this opportunity.</description>
    <label>Account Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>