force-app/main/default/objects/Opportunity__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <description>The date when the opportunity is expected to close.</description>
    <label>Close Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>