force-app/main/default/objects/Opportunity__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>The current stage of the opportunity in the sales process.</description>
    <label>Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospecting</fullName>
                <default>true</default>
                <label>Prospecting</label>
            </value>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>Needs Analysis</fullName>
            </value>
            <value>
                <fullName>Proposal/Price Quote</fullName>
            </value>
            <value>
                <fullName>Negotiation/Review</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>